# cinis

./: .gitmodules  Cargo.toml  README.md  Surfpool.toml
client/: Cargo.toml
client/src/: lib.rs
programs/cinis/: Cargo.toml
programs/cinis/src/: client.rs  error.rs  events.rs  idl_client.rs  lib.rs  state.rs  tests.rs
programs/cinis/src/instructions/: accept.rs  cancel.rs  create.rs  initialize_config.rs  mod.rs  resolve.rs  update_config.rs
