[package]
name = "cinis-client"
version = "0.1.1"
edition = "2021"
description = "Off-chain client for the cinis duel wager protocol"
license = "MIT"
repository = "https://github.com/Rhovian/cinis"
keywords = ["solana", "duel", "wager", "client", "pda"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lib]

[dependencies]
solana-address = { version = "2.2.0", features = ["decode", "curve25519"] }
solana-instruction = "3.2.0"
