[package]
name = "cinis"
version = "0.1.0"
edition = "2021"
description = "Duel wager protocol built with Quasar"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
no-entrypoint = []
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../vendor/quasar/lang" }
quasar-spl = { path = "../../vendor/quasar/spl" }
solana-address = { version = "2.2.0", features = ["syscalls", "curve25519"] }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
spl-token-interface = { version = "2.0.0" }
spl-associated-token-account-interface = "1.0.0"
solana-pubkey = "2.4.0"
solana-program-pack = { version = "3.1.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-account = { version = "3.4.0" }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
